Add basic device endpoints
